fix: updated values gap and padding for tokens

--- a/src/components/UI/organism/ProcessesCard/ProcessesCard.module.scss
+++ b/src/components/UI/organism/ProcessesCard/ProcessesCard.module.scss
@@ -1,4 +1,5 @@
 @use '../../../../shared/stylesheets/variables.scss' as v;
+@use '../../../../shared/stylesheets/tokens' as *;
 
 .processes-text-common {
   margin: 2px 0;
@@ -91,9 +92,9 @@
   &__status-card {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: $gap-sm;
     border-radius: 6px;
-    padding: 8px 12px 8px 0px;
+    padding: $padding-sm $padding-md $padding-sm $padding-min;
     width: 100%;
     transition: background-color 1s ease-in-out;
     @media screen and (min-width: v.$screen-md) {
